--- a/IBM_Capstone_Project.ipynb
+++ b/IBM_Capstone_Project.ipynb
@@ -6,7 +6,34 @@
    "source": [
     "<h1 align=center><font size = 5>IBM Data Science Capstone Project</font></h1>\n",
     "\n",
-    "<align=center>This notebook will be mainly used for the capstone project."
+    "<center>This notebook will be mainly used for the capstone project.</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Capstone Project Course!\")"
    ]
   },
   {
